# haskell-things

./: LICENSE  Readme.md  haskell-test.cabal  playground.cabal
app/: Main.hs
lib/: Calculator.hs  Colors.hs  PhoneBook.hs  Scratch.hs
